crates/nash-can/src/snapshots/nash_can__module__tests__multiple_duplicate_types_all_reported.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Foo = Int\n\ntype alias Foo = String\n\ntype alias Bar = Int\n\ntype alias Bar = String\n"
info: diagnostic
---
nash::names::duplicate_type

  × This file defines multiple `Bar` types.
   ╭─[src/Main.nash:9:12]
 6 │ 
 7 │ type alias Bar = Int
   ·            ─┬─
   ·             ╰── first definition
 8 │ 
 9 │ type alias Bar = String
   ·            ─┬─
   ·             ╰── and another first definition
   ╰────
  help: Rename one of the definitions.

nash::names::duplicate_type

  × This file defines multiple `Foo` types.
   ╭─[src/Main.nash:5:12]
 2 │ 
 3 │ type alias Foo = Int
   ·            ─┬─
   ·             ╰── first definition
 4 │ 
 5 │ type alias Foo = String
   ·            ─┬─
   ·             ╰── and another first definition
 6 │ 
   ╰────
  help: Rename one of the definitions.
