crates/nash-can/src/snapshots/nash_can__module__tests__multiple_unbound_union_vars.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype Foo\n    = Bar a b\n"
info: diagnostic
---
nash::names::not_found_type

  × Unknown type `a`.
   ╭─[src/Main.nash:4:11]
 3 │ type Foo
 4 │     = Bar a b
   ·           ─
   ╰────
  help: Similar names:

            Map
            Data
            Foo
            Int

nash::names::not_found_type

  × Unknown type `b`.
   ╭─[src/Main.nash:4:13]
 3 │ type Foo
 4 │     = Bar a b
   ·             ─
   ╰────
  help: Similar names:

            Foo
            Int
            Map
            bool
